GeneWeb Version 1.11
--------------------

* GeneWeb daemon/CGI (gwd)
  - [11/01/99] Display declined forms (for some languages). E.g.:
      * in German: "x ist ein Sohn von einem Cousin von y"
	  ("einem" instead of the inkorrect "ein").
      * in Esperanto: "aldoni personon"
          ("personon" instead of the incorrect "persono")

* Lexicon file (lexicon.txt)
  - [11/01/99] Added accusative forms.
  - [11/01/99] Fixed typo in German version (Markus Mottl).

* Documentation
--- [11/01/99] Started Swedish version (Lars Gustavsson).

GeneWeb Version 1.10
--------------------

* GeneWeb daemon/CGI (gwd)
  - [09/01/99] Fixed bug in CGI mode: images in directory "images/base"
    were sometimes not found.
  - [08/01/99] Changed term "consanguinity" into "relationship" in
    relationship computing (because confusion with the usual meaning of
    the term "consanguinity").
  - [06/01/99] Deleted Unix option "-robot_xcl": worked bad, did not detect
    robots, detected robots when there are not, too complicated to fix.
    (The normal HTTP robot exclusion remains.)
  - [28/12/98] Changed some http requests to hold no accents (should be
    continued...)
  - [19/12/98] Fixed bug quotes disappearing in field "first name aliases"
    in form Update/Person (if the value holds quotes).
  - [18/12/98] No more HTML "table" used in relationship links with
    one branch (=> more compact display and visible in browsers
    without tables, e.g. "lynx").
  - [13/12/98] The directory cnt is no more searched in the directory where
    the daemon (or the CGI) is launched but in the base directory (option -bd
    of gwd; no difference if option -bd not used).
  - [13/12/98] In relationship links, display the ancestor couple (if both
    are ancestors).
--- [12/12/98..13/12/98] Added displaying of cousins.
  - [11/12/98] Fixed more bugs (accents) due to new ANSEL encoding.

* Gedcom to GeneWeb (ged2gwb)
  - [14/12/98] Fixed bug in Windows version (displaying "uncaught exception: